--- a/index.html
+++ b/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html lang="ru">
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <title>Cakes</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Open+Sans+Condensed:wght@300&family=Pacifico&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,669;0,700;0,800;0,900;1,400;1,500;1,600;1,669;1,700;1,800;1,900&display=swap"
-            rel="stylesheet"
-        />
-        <link rel="stylesheet" type="text/css" href="styles/index.css" />
-    </head>
-    <body></body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Cakes</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" href="styles/index.css" />
+  </head>
+  <body>
+    <header class="header">
+      <h1 class="header__logo">Cakes</h1>
+      <input type="checkbox" class="header__navigation-toggle navigation-toggle" id="navigation-toggle" />
+      <nav class="header__navigation navigation">
+        <ul class="header__list">
+          <li class="navigation__item"><a class="navigation__link header__link" href="#">Наши торты</a></li>
+          <li class="navigation__item"><a class="navigation__link header__link" href="#">Индивидуальный заказ</a></li>
+          <li class="navigation__item"><a class="navigation__link header__link" href="#">Отзывы</a></li>
+          <li class="navigation__item"><a class="navigation__link header__link" href="#">О нас</a></li>
+          <li class="navigation__item"><a class="navigation__link header__link" href="#">Как заказать</a></li>
+          <li class="navigation__item"><a class="navigation__link header__link" href="#">Контакты</a></li>
+        </ul>
+      </nav>
+      <label for="navigation-toggle" class="header__navigation-toggle-label">
+        <span class="icon icon-menu"></span>
+      </label>
+      <a class="header__phone-number" href="tel:+79068999296">+7 906 899 92 96</a>
+    </header>
+  </body>
 </html>
