Add choose cake desktop section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <title>Cakes | Закажи свой вкуснейший торт</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="styles/index.css" />
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎂</text></svg>">
+    <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎂</text></svg>"
+    />
   </head>
   <body>
     <header class="header">
@@ -26,5 +29,22 @@
       </label>
       <a class="header__phone-number" href="tel:+79068999296">+7 906 899 92 96</a>
     </header>
+    <section class="choose-cake">
+      <div class="choose-cake__wrapper">
+        <h3 class="choose-cake__header text text_typography">Торты на заказ</h3>
+        <h4 class="choose-cake__subheader text text_handwritten text_dark">Ручная работа</h4>
+        <button class="choose-cake__button button">Выбрать торт</button>
+        <div class="choose-cake__benefits">
+          <div class="choose-cake__benefits-item benefit">
+            <span class="icon icon-leaf benefit__icon"></span>
+            <span class="benefit__text">Натуральные ингридиенты</span>
+          </div>
+          <div class="choose-cake__benefits-item benefit">
+            <span class="icon icon-gift benefit__icon"></span>
+            <span class="benefit__text">Доставка бесплатно при заказе от 2000 рублей*</span>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
