Add skeleton of assortment section

--- a/index.html
+++ b/index.html
@@ -46,5 +46,35 @@
         </div>
       </div>
     </section>
+    <section class="assortment">
+      <h3>Наши торты</h3>
+      <div class="assortment__grid">
+        <div class="assortment__grid-classic">
+          <h5>Классические</h5>
+          <img class="assortment__image" src="./images/desktop/img5.png" />
+        </div>
+        <div class="assortment__grid-muss">
+          <h5>Муссовые</h5>
+          <img class="assortment__image" src="./images/desktop/img7.png" />
+        </div>
+        <div class="assortment__grid-wedding">
+          <h5>Свадебные</h5>
+          <img class="assortment__image" src="./images/desktop/img10.png" />
+        </div>
+        <div class="assortment__grid-kids">
+          <h5>Детские</h5>
+          <img class="assortment__image" src="./images/desktop/img13.png" />
+        </div>
+        <div class="assortment__grid-men">
+          <h5>Мужчинам</h5>
+          <img class="assortment__image" src="./images/desktop/img15.png" />
+        </div>
+        <div class="assortment__grid-women">
+          <h5>Женщинам</h5>
+          <img class="assortment__image" src="./images/desktop/img17.png" />
+        </div>
+      </div>
+    </section>
+    <section class="order"></section>
   </body>
 </html>
