Add skeleton of how-to-order section

--- a/index.html
+++ b/index.html
@@ -63,11 +63,11 @@
         </div>
         <div class="assortment__grid-kids">
           <h5>Детские</h5>
-          <img class="assortment__image" src="./images/desktop/img13.png" />
+          <img class="assortment__image" src="./images/desktop/img15.png" />
         </div>
         <div class="assortment__grid-men">
           <h5>Мужчинам</h5>
-          <img class="assortment__image" src="./images/desktop/img15.png" />
+          <img class="assortment__image" src="./images/desktop/img13.png" />
         </div>
         <div class="assortment__grid-women">
           <h5>Женщинам</h5>
@@ -75,6 +75,33 @@
         </div>
       </div>
     </section>
-    <section class="order"></section>
+    <section class="order">
+      <h3 class="order__header text text_typography">Как заказать</h3>
+      <div class="order__instruction">
+        <span class="order__instruction-step text text_typography">1</span>
+        <p class="order__instruction-content">
+          <span class="order__instruction-header">Срок заказа</span>
+          <span class="order__instruction-info">
+            Размещать заказы желательно за 2-3 дня. На выходные заказы лучше размещать минимум за неделю.
+          </span>
+        </p>
+      </div>
+      <div class="order__instruction">
+        <span class="order__instruction-step text text_typography">2</span>
+        <p class="order__instruction-content">
+          <span class="order__instruction-header">Доставка по городу</span>
+          <span class="order__instruction-info">
+            Доставка в пределах города 200 рублей, при заказе на сумму более 2000 доставка бесплатно.
+          </span>
+        </p>
+      </div>
+      <div class="order__instruction">
+        <span class="order__instruction-step text text_typography">3</span>
+        <p class="order__instruction-content">
+          <span class="order__instruction-header">Доставка за городом</span>
+          <span class="order__instruction-info"> Доставка за пределами города рассчитывается индивидуально. </span>
+        </p>
+      </div>
+    </section>
   </body>
 </html>
