Add contacts section skeleton

--- a/index.html
+++ b/index.html
@@ -103,5 +103,32 @@
         </p>
       </div>
     </section>
+    <section class="contacts">
+      <h3 class="contacts__header text text_typography">Контакты</h3>
+      <h4 class="contacts__subheader text text_handwritten">Остались вопросы?</h4>
+      <div>
+        <p>Заполните форму ниже и наш кондитер свяжется с Вами</p>
+        <form>
+          <input type="text" placeholder="Ваше имя" />
+          <input type="email" placeholder="Email адрес" />
+          <input type="textarea" placeholder="Ваш вопрос" />
+          <button class="button">Отправить</button>
+        </form>
+      </div>
+      <div>
+        <p>Или позвоните по телефону</p>
+        <a href="tel:+79068999296">+7 906 899 92 96</a>
+        <p>Наша почта: <a href="mailto:bakerybypavel@mail.ru">bakerybypavel@mail.ru</a></p>
+        <div>
+          <p>Мы в соц. сетях</p>
+          <a href="https://instagram.com" target="_blank" class="contacts__social-network-button">
+            <span class="contacts__social-network-button-icon icon icon-instagram"></span>
+          </a>
+          <a href="https://vk.com" target="_blank" class="contacts__social-network-button">
+            <span class="contacts__social-network-button-icon icon icon-vk"></span>
+          </a>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
