Add footer skeleton

--- a/index.html
+++ b/index.html
@@ -130,5 +130,28 @@
         </div>
       </div>
     </section>
+    <footer class="footer">
+      <section class="footer__section">
+        <h1 class="footer__logo">Cakes</h1>
+        <nav class="footer__navigation navigation">
+          <ul class="footer__list">
+            <li class="navigation__item"><a class="navigation__link footer__link" href="#">Наши торты</a></li>
+            <li class="navigation__item"><a class="navigation__link footer__link" href="#">Индивидуальный заказ</a></li>
+            <li class="navigation__item"><a class="navigation__link footer__link" href="#">Отзывы</a></li>
+            <li class="navigation__item"><a class="navigation__link footer__link" href="#">О нас</a></li>
+            <li class="navigation__item"><a class="navigation__link footer__link" href="#">Как заказать</a></li>
+            <li class="navigation__item"><a class="navigation__link footer__link" href="#">Контакты</a></li>
+          </ul>
+        </nav>
+        <a href="https://instagram.com" target="_blank" class="footer__social-network-button">
+          <span class="footer__social-network-button-icon icon icon-instagram"></span>
+        </a>
+        <a href="https://vk.com" target="_blank" class="footer__social-network-button">
+          <span class="footer__social-network-button-icon icon icon-vk"></span>
+        </a>
+      </section>
+      <hr />
+      @ 2018 Cakes
+    </footer>
   </body>
 </html>
