Style assortment for desktop

--- a/index.html
+++ b/index.html
@@ -46,32 +46,69 @@
         </div>
       </div>
     </section>
-    <section class="assortment">
-      <h3>Наши торты</h3>
+    <section class="section section_centered assortment">
+      <h3 class="section-title text text_typography assortment__title">Наши торты</h3>
       <div class="assortment__grid">
-        <div class="assortment__grid-classic">
-          <h5>Классические</h5>
-          <img class="assortment__image" src="./images/desktop/img5.png" />
+        <div
+          class="assortment__grid-item assortment__grid-classic"
+          style="background-image: url(./images/desktop/img5.png)"
+        >
+          <h5 class="assortment__type">Классические</h5>
+          <h6 class="assortment__count-of-type">24 вида</h6>
+
+          <button class="button-link assortment__more-button">
+            Смотреть<span class="icon icon-arrow-right2 assortment__more-icon"></span>
+          </button>
         </div>
-        <div class="assortment__grid-muss">
-          <h5>Муссовые</h5>
-          <img class="assortment__image" src="./images/desktop/img7.png" />
+        <div
+          class="assortment__grid-item assortment__grid-muss"
+          style="background-image: url(./images/desktop/img7.png)"
+        >
+          <h5 class="assortment__type">Муссовые</h5>
+          <h6 class="assortment__count-of-type">12 видов</h6>
+          <button class="button-link assortment__more-button">
+            <span class="icon icon-arrow-right2 assortment__more-icon"></span>
+          </button>
         </div>
-        <div class="assortment__grid-wedding">
-          <h5>Свадебные</h5>
-          <img class="assortment__image" src="./images/desktop/img10.png" />
+        <div
+          class="assortment__grid-item assortment__grid-wedding"
+          style="background-image: url(./images/desktop/img10.png)"
+        >
+          <h5 class="assortment__type">Свадебные</h5>
+          <h6 class="assortment__count-of-type">20 видов</h6>
+          <button class="button-link assortment__more-button">
+            <span class="icon icon-arrow-right2 assortment__more-icon"></span>
+          </button>
         </div>
-        <div class="assortment__grid-kids">
-          <h5>Детские</h5>
-          <img class="assortment__image" src="./images/desktop/img15.png" />
+        <div
+          class="assortment__grid-item assortment__grid-kids"
+          style="background-image: url(./images/desktop/img15.png)"
+        >
+          <h5 class="assortment__type">Детские</h5>
+          <h6 class="assortment__count-of-type">18 видов</h6>
+          <button class="button-link assortment__more-button">
+            <span class="icon icon-arrow-right2 assortment__more-icon"></span>
+          </button>
         </div>
-        <div class="assortment__grid-men">
-          <h5>Мужчинам</h5>
-          <img class="assortment__image" src="./images/desktop/img13.png" />
+        <div
+          class="assortment__grid-item assortment__grid-men"
+          style="background-image: url(./images/desktop/img13.png)"
+        >
+          <h5 class="assortment__type">Мужчинам</h5>
+          <h6 class="assortment__count-of-type">12 видов</h6>
+          <button class="button-link assortment__more-button">
+            <span class="icon icon-arrow-right2 assortment__more-icon"></span>
+          </button>
         </div>
-        <div class="assortment__grid-women">
-          <h5>Женщинам</h5>
-          <img class="assortment__image" src="./images/desktop/img17.png" />
+        <div
+          class="assortment__grid-item assortment__grid-women"
+          style="background-image: url(./images/desktop/img17.png)"
+        >
+          <h5 class="assortment__type">Женщинам</h5>
+          <h6 class="assortment__count-of-type">16 видов</h6>
+          <button class="button-link assortment__more-button">
+            <span class="icon icon-arrow-right2 assortment__more-icon"></span>
+          </button>
         </div>
       </div>
     </section>
