Fix order section

--- a/index.html
+++ b/index.html
@@ -112,35 +112,37 @@
         </div>
       </div>
     </section>
-    <section class="order">
-      <h3 class="order__header text text_typography">Как заказать</h3>
-      <div class="order__instruction">
-        <span class="order__instruction-step text text_typography">1</span>
-        <p class="order__instruction-content">
-          <span class="order__instruction-header">Срок заказа</span>
-          <span class="order__instruction-info">
-            Размещать заказы желательно за 2-3 дня. На выходные заказы лучше размещать минимум за неделю.
-          </span>
-        </p>
-      </div>
-      <div class="order__instruction">
-        <span class="order__instruction-step text text_typography">2</span>
-        <p class="order__instruction-content">
-          <span class="order__instruction-header">Доставка по городу</span>
-          <span class="order__instruction-info">
-            Доставка в пределах города 200 рублей, при заказе на сумму более 2000 доставка бесплатно.
-          </span>
-        </p>
-      </div>
-      <div class="order__instruction">
-        <span class="order__instruction-step text text_typography">3</span>
-        <p class="order__instruction-content">
-          <span class="order__instruction-header">Доставка за городом</span>
-          <span class="order__instruction-info"> Доставка за пределами города рассчитывается индивидуально. </span>
-        </p>
+    <section class="section order">
+      <div class="order__content-wrapper">
+        <h3 class="order__header text text_typography">Как заказать</h3>
+        <div class="order__instruction">
+          <span class="order__instruction-step text text_typography">1</span>
+          <p class="order__instruction-content">
+            <span class="order__instruction-header">Срок заказа</span>
+            <span class="order__instruction-info">
+              Размещать заказы желательно за 2-3 дня. На выходные заказы лучше размещать минимум за неделю.
+            </span>
+          </p>
+        </div>
+        <div class="order__instruction">
+          <span class="order__instruction-step text text_typography">2</span>
+          <p class="order__instruction-content">
+            <span class="order__instruction-header">Доставка по городу</span>
+            <span class="order__instruction-info">
+              Доставка в пределах города 200 рублей, при заказе на сумму более 2000 доставка бесплатно.
+            </span>
+          </p>
+        </div>
+        <div class="order__instruction">
+          <span class="order__instruction-step text text_typography">3</span>
+          <p class="order__instruction-content">
+            <span class="order__instruction-header">Доставка за городом</span>
+            <span class="order__instruction-info"> Доставка за пределами города рассчитывается индивидуально. </span>
+          </p>
+        </div>
       </div>
     </section>
-    <section class="contacts">
+    <section class="section contacts">
       <h3 class="contacts__header text text_typography">Контакты</h3>
       <h4 class="contacts__subheader text text_handwritten">Остались вопросы?</h4>
       <div>
@@ -167,7 +169,7 @@
         </div>
       </div>
     </section>
-    <footer class="footer">
+    <footer class="section footer">
       <section class="footer__section">
         <h1 class="footer__logo">Cakes</h1>
         <nav class="footer__navigation navigation">
