Add footer for desktop

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <input type="checkbox" class="header__navigation-toggle navigation-toggle" id="navigation-toggle" />
       <nav class="header__navigation navigation">
         <ul class="header__list">
-          <li class="navigation__item"><a class="navigation__link header__link" href="#assortment">Наши торты</a></li>
-          <li class="navigation__item"><a class="navigation__link header__link" href="#order">Как заказать</a></li>
-          <li class="navigation__item"><a class="navigation__link header__link" href="#contacts">Контакты</a></li>
+          <li class="header__navigation-item navigation__item"><a class="navigation__link header__link" href="#assortment">Наши торты</a></li>
+          <li class="header__navigation-item navigation__item"><a class="navigation__link header__link" href="#order">Как заказать</a></li>
+          <li class="header__navigation-item navigation__item"><a class="navigation__link header__link" href="#contacts">Контакты</a></li>
         </ul>
       </nav>
       <label for="navigation-toggle" class="header__navigation-toggle-label">
@@ -174,7 +174,7 @@
     </main>
     <footer class="section footer">
       <section class="footer__section">
-        <h1 class="footer__logo">Cakes</h1>
+        <h1 class="footer__logo text text_typography">Cakes</h1>
         <nav class="footer__navigation navigation">
           <ul class="footer__list">
             <li class="navigation__item"><a class="navigation__link footer__link" href="#assortment">Наши торты</a></li>
@@ -182,15 +182,15 @@
             <li class="navigation__item"><a class="navigation__link footer__link" href="#contacts">Контакты</a></li>
           </ul>
         </nav>
-        <a href="https://instagram.com" target="_blank" class="footer__social-network-button">
+        <a class="footer__social-network-button" href="https://instagram.com" target="_blank">
           <span class="footer__social-network-button-icon icon icon-instagram"></span>
         </a>
-        <a href="https://vk.com" target="_blank" class="footer__social-network-button">
+        <a class="footer__social-network-button" href="https://vk.com" target="_blank">
           <span class="footer__social-network-button-icon icon icon-vk"></span>
         </a>
       </section>
-      <hr />
-      @ 2018 Cakes
+      <!-- <hr /> -->
+      <span class="footer__copyright">@ 2020 Cakes</span>
     </footer>
   </body>
 </html>
