Add tablet look to contacts section

--- a/index.html
+++ b/index.html
@@ -16,9 +16,15 @@
       <input type="checkbox" class="header__navigation-toggle navigation-toggle" id="navigation-toggle" />
       <nav class="header__navigation navigation">
         <ul class="header__list">
-          <li class="header__navigation-item navigation__item"><a class="navigation__link header__link" href="#assortment">Наши торты</a></li>
-          <li class="header__navigation-item navigation__item"><a class="navigation__link header__link" href="#order">Как заказать</a></li>
-          <li class="header__navigation-item navigation__item"><a class="navigation__link header__link" href="#contacts">Контакты</a></li>
+          <li class="header__navigation-item navigation__item">
+            <a class="navigation__link header__link" href="#assortment">Наши торты</a>
+          </li>
+          <li class="header__navigation-item navigation__item">
+            <a class="navigation__link header__link" href="#order">Как заказать</a>
+          </li>
+          <li class="header__navigation-item navigation__item">
+            <a class="navigation__link header__link" href="#contacts">Контакты</a>
+          </li>
         </ul>
       </nav>
       <label for="navigation-toggle" class="header__navigation-toggle-label">
@@ -149,7 +155,7 @@
             <form class="contacts__form">
               <input class="contacts__form-input" type="text" placeholder="Ваше имя" />
               <input class="contacts__form-input" type="email" placeholder="Email адрес" />
-              <input class="contacts__form-input" type="textarea" placeholder="Ваш вопрос" />
+              <textarea class="contacts__form-textarea" placeholder="Ваш вопрос"></textarea>
               <button class="button contacts__form-submit">Отправить</button>
             </form>
           </div>
